finish work on small bugs

--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,3 @@
-/* fix magnifying glass in search on larger screen */
-/* when typing in input, make magnifying glass go away  */
-/* add box shadows to elements */
-
-
 @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 
 * {
@@ -126,12 +121,14 @@ select {
     margin-right: 5px;
 }
 
+
+/* not sure if going to keep grid the same on all screens */
+
 .border-countries {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     width: 100%;
-
 }
 
 .border-country {
@@ -187,7 +184,7 @@ select {
         margin-bottom: -25px;
     }
 
-    .detail-image img {
+    .detail-container img {
         height: 300px;
         width: 100%;
     }
@@ -210,36 +207,98 @@ select {
 
 }
 
-/* and (max-width: 768px) */
-@media (min-width: 501px) {
+
+@media (min-width: 501px) and (max-width: 768px){
 
 
-    .search-container {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
+    .container {
+        margin-bottom: 20px;
     }
 
-    .search-container input {
+    .country-container {
+        display: grid;
+        grid-template-rows: repeat(auto-fill, 1fr);
+        max-height: max-content;
+    }
+
+    .container input {
+        width: 100%;
+        height: 50px;
+        margin-bottom: 20px;
+    }
+
+    .container select {
         width: 50%;
         height: 50px;
     }
 
-    .search-container select {
-        height: 50px;
+    .card img {
+        border-radius: 10px;
+        height: 50%;
+        width: 100%;
     }
 
-    .country-container {
+    .card {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        height: 400px;
+        border-radius: 10px;
+    }
+
+    .detail {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin-bottom: -25px;
+    }
+
+    .detail-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
         width: 100%;
+    }
+
+    .details-col {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        
+    }
+
+    .details {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: space-between;
+    }
+
+    .detail-container img {
+        max-height: 300px;
+        height: max-content;
+        width: 100%;
+    }
+
+    .details-info {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .details-info:nth-of-type(1) {
+        margin-bottom: 25px;
+    }
+
+    .border-countries {
         display: grid;
-        grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
+        width: 100%;
     }
 
 }
 
-/* @media (min-width: 769px) {
-
+@media (min-width: 769px) {
 
     .search-container {
         display: flex;
@@ -263,4 +322,43 @@ select {
         grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
     }
 
-} */
+
+    .detail-container {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+        width: 100%;
+    }
+
+    .detail-container img {
+        max-height: 500px;
+        width: 45%;
+    }
+
+    .details {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .details-col {
+        display: flex;
+        flex-direction: column;
+        max-height: 400px;
+        width: 45%;
+    }
+
+    .details-info {
+        display: flex;
+        flex-direction: column;
+        
+    }
+
+    .detail {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
+}
